force-app/main/default/objects/Membership__c/fields/Rider__c.field-meta.xml
<CustomField>
    <fullName>Rider__c</fullName>
    <label>Rider</label>
    <referenceTo>Rider__c</referenceTo>
    <relationshipLabel>Membership</relationshipLabel>
    <relationshipName>Membership</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>