force-app/main/default/objects/Membership__c/fields/Riding_Group__c.field-meta.xml
<CustomField>
    <fullName>Riding_Group__c</fullName>
    <label>Riding Group</label>
    <referenceTo>Riding_Group__c</referenceTo>
    <relationshipLabel>Membership</relationshipLabel>
    <relationshipName>Membership</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>